<resources>
    <string name="app_name">中風中醫行動通</string>
    <string name="strokeTitle">中風症狀</string>
    <string name="pulseText">脈搏</string>
    <string name="pulseToggleButtonNormal">正常</string>
    <string name="pulseToggleButtonTextNormal">0</string>
    <string name="pulseToggleButtonTight">脈搏緊</string>
    <string name="pulseToggleButtonTextTight">123</string>
    <string name="submitButtonText">送出</string>
    <string name="resultText">結果</string>
    <string name="pulseToggleButtonTextWeak">456</string>
    <string name="pulseToggleButtonWeak">脈搏弱</string>
    <string name="mouseText">口</string>
    <string name="mouseToggleButtonNormal">正常</string>
    <string name="mouseToggleButtonTextNormal">0</string>
    <string name="mouseToggleButtonTextThirsty">789</string>
    <string name="mouseToggleButtonThirsty">口乾</string>
    <string name="mouseToggleButtonTextBitter">81</string>
    <string name="mouseToggleButtonBitter">口苦</string>
    <string name="UpperLimbText">上肢</string>
    <string name="UpperLimbToggleButtonNormal">正常</string>
    <string name="UpperLimbToggleButtonTextNormal">0</string>
    <string name="UpperLimbToggleButtonTextPowerless">1289</string>
    <string name="UpperLimbToggleButtonPowerless">上肢無力</string>
    <string name="UpperLimbToggleButtonTextAche">1291</string>
    <string name="UpperLimbToggleButtonAche">上肢痛</string>
    <string name="selectedSymptomText">已選擇症狀</string>
    <string name="tongueText">舌</string>
    <string name="tongueToggleButtonNormal">正常</string>
    <string name="tongueToggleButtonTextNormal">0</string>
    <string name="tongueToggleButton1024">舌體控制強硬</string>
    <string name="tongueToggleButtonText1024">1024</string>
    <string name="tongueToggleButton1170">舌體控制歪斜</string>
    <string name="tongueToggleButtonText1170">1170</string>
    <string name="tongueToggleButton826">舌苔顏色黃</string>
    <string name="tongueToggleButtonText826">826</string>
    <string name="tongueToggleButton823">舌苔顏色白</string>
    <string name="tongueToggleButtonText823">823</string>
    <string name="tongueToggleButton832">舌苔質地黏膩</string>
    <string name="tongueToggleButtonText832">832</string>
    <string name="tongueToggleButton848">舌體顏色深紅色</string>
    <string name="tongueToggleButtonText848">848</string>
    <string name="tongueToggleButton827">舌體顏色紅色</string>
    <string name="tongueToggleButtonText827">827</string>
    <string name="tongueToggleButton831">舌苔濕度乾</string>
    <string name="tongueToggleButtonText831">831</string>
    <string name="tongueToggleButton838">舌苔厚度薄</string>
    <string name="tongueToggleButtonText838">838</string>
    <string name="tongueToggleButton825">舌苔厚度厚</string>
    <string name="tongueToggleButtonText825">825</string>
    <string name="tongueToggleButton1042">舌苔顏色灰</string>
    <string name="tongueToggleButtonText1042">1042</string>
    <string name="tongueToggleButton1011">舌苔顏色黑</string>
    <string name="tongueToggleButtonText1011">1011</string>
    <string name="tongueToggleButton829">舌體顏色淡白色</string>
    <string name="tongueToggleButtonText829">829</string>
    <string name="tongueToggleButton846">舌體顏色黑色</string>
    <string name="tongueToggleButtonText846">846</string>
    <string name="tongueToggleButton842">舌體顏色淡紅色</string>
    <string name="tongueToggleButtonText842">842</string>
    <string name="tongueToggleButton1016">舌苔形體全部剝落</string>
    <string name="tongueToggleButtonText1016">1016</string>
    <string name="tongueToggleButton824">舌苔形體部分剝落</string>
    <string name="tongueToggleButtonText824">824</string>
    <string name="pulseToggleButton992">脈力度大</string>
    <string name="pulseToggleButtonText992">992</string>
    <string name="pulseToggleButton799">脈緊度緊</string>
    <string name="pulseToggleButtonText799">799</string>
    <string name="pulseToggleButton809">脈長度長</string>
    <string name="pulseToggleButtonText809">809</string>
    <string name="pulseToggleButton806">脈利度滑</string>
    <string name="pulseToggleButtonText806">806</string>
    <string name="pulseToggleButton798">脈寬度細</string>
    <string name="pulseToggleButtonText798">798</string>
    <string name="pulseToggleButton795">脈速度快</string>
    <string name="pulseToggleButtonText795">795</string>
    <string name="pulseToggleButton807">脈速度慢</string>
    <string name="pulseToggleButtonText807">807</string>
    <string name="pulseToggleButton804">脈幅異常</string>
    <string name="pulseToggleButtonText804">804</string>
    <string name="pulseToggleButton801">脈利度澀</string>
    <string name="pulseToggleButtonText801">801</string>
    <string name="pulseToggleButton810">脈緊度散</string>
    <string name="pulseToggleButtonText810">810</string>
    <string name="pulseToggleButton813">脈力度弱</string>
    <string name="pulseToggleButtonText813">813</string>
    <string name="limbText">四肢</string>
    <string name="limbToggleButtonNormal">正常</string>
    <string name="limbToggleButtonTextNormal">0</string>
    <string name="limbToggleButton202">半身偏癱</string>
    <string name="limbToggleButtonText202">202</string>
    <string name="limbToggleButton1274">四肢麻</string>
    <string name="limbToggleButtonText1274">1274</string>
    <string name="limbToggleButton569">四肢僵硬</string>
    <string name="limbToggleButtonText569">569</string>
    <string name="limbToggleButton563">四肢無力</string>
    <string name="limbToggleButtonText563">563</string>
    <string name="limbToggleButton558">四肢拘急</string>
    <string name="limbToggleButtonText558">558</string>
    <string name="limbToggleButton785">四肢厥冷</string>
    <string name="limbToggleButtonText785">785</string>
    <string name="limbToggleButton975">四肢蠕動</string>
    <string name="limbToggleButtonText975">975</string>
    <string name="limbToggleButton567">四肢腫脹</string>
    <string name="limbToggleButtonText567">567</string>
    <string name="limbToggleButton557">四肢抽搐</string>
    <string name="limbToggleButtonText557">557</string>
    <string name="facialToggleButtonNormal">正常</string>
    <string name="facialToggleButtonTextNormal">0</string>
    <string name="facialToggleButton68">口角歪斜</string>
    <string name="facialToggleButtonText68">68</string>
    <string name="facialToggleButton348">頭暈</string>
    <string name="facialToggleButtonText348">348</string>
    <string name="facialToggleButton325">面色紅</string>
    <string name="facialToggleButtonText325">325</string>
    <string name="facialToggleButton323">面色白</string>
    <string name="facialToggleButtonText323">323</string>
    <string name="facialToggleButton327">面色暗</string>
    <string name="facialToggleButtonText327">327</string>
    <string name="facialToggleButton330">面垢</string>
    <string name="facialToggleButtonText330">330</string>
    <string name="facialToggleButton356">頸項僵</string>
    <string name="facialToggleButtonText356">356</string>
    <string name="facialToggleButton272">耳鳴</string>
    <string name="facialToggleButtonText272">272</string>
    <string name="facialText">頭面</string>
    <string name="eyeToggleButtonNormal">正常</string>
    <string name="eyeToggleButtonTextNormal">0</string>
    <string name="eyeText">目</string>
    <string name="eyeToggleButton320">口目歪斜</string>
    <string name="eyeToggleButtonText320">320</string>
    <string name="eyeToggleButton619">目眩</string>
    <string name="eyeToggleButtonText619">619</string>
    <string name="eyeToggleButton618">目紅</string>
    <string name="eyeToggleButtonText618">618</string>
    <string name="eyeToggleButton1008">目直視</string>
    <string name="eyeToggleButtonText1008">1008</string>
    <string name="eyeToggleButton621">目散</string>
    <string name="eyeToggleButtonText621">621</string>
    <string name="emotionalToggleButtonNormal">正常</string>
    <string name="emotionalToggleButtonTextNormal">0</string>
    <string name="emotionalText">情緒及意識</string>
    <string name="emotionalToggleButton148">情緒憤怒</string>
    <string name="emotionalToggleButtonText148">148</string>
    <string name="emotionalToggleButton144">情緒煩躁</string>
    <string name="emotionalToggleButtonText144">144</string>
    <string name="emotionalToggleButton130">情緒心慌</string>
    <string name="emotionalToggleButtonText130">130</string>
    <string name="emotionalToggleButton135">意識昏迷</string>
    <string name="emotionalToggleButtonText135">135</string>
    <string name="sleepText">睡眠</string>
    <string name="sleepToggleButtonNormal">正常</string>
    <string name="sleepToggleButtonTextNormal">0</string>
    <string name="sleepToggleButton450">難眠</string>
    <string name="sleepToggleButtonText450">450</string>
    <string name="sleepToggleButton441">嗜睡</string>
    <string name="sleepToggleButtonText441">441</string>
    <string name="sleepToggleButton434">打鼾</string>
    <string name="sleepToggleButtonText434">434</string>
    <string name="bowelText">大小便</string>
    <string name="bowelToggleButtonNormal">正常</string>
    <string name="bowelToggleButtonTextNormal">0</string>
    <string name="bowelToggleButton54">大便質硬</string>
    <string name="bowelToggleButtonText54">54</string>
    <string name="bowelToggleButton32">大便次少</string>
    <string name="bowelToggleButtonText32">32</string>
    <string name="bowelToggleButton31">大便失禁</string>
    <string name="bowelToggleButtonText31">31</string>
    <string name="bowelToggleButton5">小便失禁</string>
    <string name="bowelToggleButtonText5">5</string>
    <string name="digestText">口</string>
    <string name="digestToggleButtonNormal">正常</string>
    <string name="digestToggleButtonTextNormal">0</string>
    <string name="digestToggleButton70">口苦</string>
    <string name="digestToggleButtonText70">70</string>
    <string name="digestToggleButton299">喉乾</string>
    <string name="digestToggleButtonText299">299</string>
    <string name="digestToggleButton425">痰量多</string>
    <string name="digestToggleButtonText425">425</string>
    <string name="digestToggleButton81">口膩</string>
    <string name="digestToggleButtonText81">81</string>
    <string name="digestToggleButton80">口噤</string>
    <string name="digestToggleButtonText80">80</string>
    <string name="digestToggleButton402">涎量多</string>
    <string name="digestToggleButtonText402">402</string>
    <string name="sweatText">汗、熱</string>
    <string name="sweatToggleButtonNormal">正常</string>
    <string name="sweatToggleButtonTextNormal">0</string>
    <string name="sweatToggleButton161">午後發熱</string>
    <string name="sweatToggleButtonText161">161</string>
    <string name="sweatToggleButton386">自汗</string>
    <string name="sweatToggleButtonText386">386</string>
    <string name="sweatToggleButton160">發熱</string>
    <string name="sweatToggleButtonText160">160</string>
    <string name="sweatToggleButton365">大汗</string>
    <string name="sweatToggleButtonText365">365</string>
    <string name="sweatToggleButton432">戰汗</string>
    <string name="sweatToggleButtonText432">432</string>
    <string name="breathText">胸腹</string>
    <string name="breathToggleButton279">呼吸微弱</string>
    <string name="breathToggleButtonText279">279</string>
    <string name="breathToggleButton277">呼吸急促</string>
    <string name="breathToggleButtonText277">277</string>
    <string name="breathToggleButtonNormal">正常</string>
    <string name="breathToggleButtonTextNormal">0</string>
    <string name="otherText">其他</string>
    <string name="otherToggleButton511">腹脹</string>
    <string name="otherToggleButtonText511">511</string>
    <string name="otherToggleButton890">不定部位麻</string>
    <string name="otherToggleButtonText890">890</string>
    <string name="otherToggleButton463">心悸</string>
    <string name="otherToggleButtonText463">463</string>
    <string name="differentiateResultText">辨證結果</string>
    <string name="diff2prescription">查看推薦處方</string>
</resources>